# mikai-termux

./: LICENSE  README-TERMUX.md  README.md  install-termux.sh  install-windows.bat  transfer-to-emulator.bat
examples/: termux_example.c  windows_test.c
source/: CMakeLists.txt
